INCLUDE/WIN16/OLECTL.H

interface IOleControl;

interface IOleControlSite;

interface ISimpleFrameSite;

interface IPersistStreamInit;

interface IPropertyNotifySink;

interface IProvideClassInfo;

interface IConnectionPointContainer;

interface IEnumConnectionPoints;

interface IConnectionPoint;

interface IEnumConnections;

interface IClassFactory2;

interface ISpecifyPropertyPages;

interface IPerPropertyBrowsing;

interface IPropertyPageSite;

interface IPropertyPage;

interface IPropertyPage2;

interface IFont;

interface IFontDisp;

interface IPicture;

interface IPictureDisp;
typedef interface IOleControl IOleControl;

typedef interface IOleControlSite IOleControlSite;

typedef interface ISimpleFrameSite ISimpleFrameSite;

typedef interface IPersistStreamInit IPersistStreamInit;

typedef interface IPropertyNotifySink IPropertyNotifySink;

typedef interface IProvideClassInfo IProvideClassInfo;

typedef interface IConnectionPointContainer IConnectionPointContainer;

typedef interface IEnumConnectionPoints IEnumConnectionPoints;

typedef interface IConnectionPoint IConnectionPoint;

typedef interface IEnumConnections IEnumConnections;

typedef interface IClassFactory2 IClassFactory2;

typedef interface ISpecifyPropertyPages ISpecifyPropertyPages;

typedef interface IPerPropertyBrowsing IPerPropertyBrowsing;

typedef interface IPropertyPageSite IPropertyPageSite;

typedef interface IPropertyPage IPropertyPage;

typedef interface IPropertyPage2 IPropertyPage2;

typedef interface IFont IFont;

typedef interface IFontDisp IFontDisp;

typedef interface IPicture IPicture;

typedef interface IPictureDisp IPictureDisp;

typedef long OLE_XPOS_PIXELS;

typedef long OLE_YPOS_PIXELS;

typedef long OLE_XSIZE_PIXELS;

typedef long OLE_YSIZE_PIXELS;

typedef long OLE_XPOS_HIMETRIC;

typedef long OLE_YPOS_HIMETRIC;

typedef long OLE_XSIZE_HIMETRIC;

typedef long OLE_YSIZE_HIMETRIC;

typedef float OLE_XPOS_CONTAINER;

typedef float OLE_YPOS_CONTAINER;

typedef float OLE_XSIZE_CONTAINER;

typedef float OLE_YSIZE_CONTAINER;

typedef enum { triUnchecked = 0, triChecked = 1, triGray = 2 } OLE_TRISTATE;

typedef VARIANT_BOOL OLE_OPTEXCLUSIVE;

typedef VARIANT_BOOL OLE_CANCELBOOL;

typedef VARIANT_BOOL OLE_ENABLEDEFAULTBOOL;

typedef UINT OLE_HANDLE;



/////////////////////////////////////////////////////////////////////////////
// POINTF structure

typedef struct tagPOINTF
{
	float x;
	float y;

} POINTF;



/////////////////////////////////////////////////////////////////////////////
// CONTROLINFO structure

typedef struct tagCONTROLINFO
{
	ULONG cb;       // Structure size
	HACCEL hAccel;  // Control mnemonics
	USHORT cAccel;  // Number of entries in mnemonics table
	DWORD dwFlags;  // Flags chosen from below

} CONTROLINFO;



/////////////////////////////////////////////////////////////////////////////
// CONNECTDATA structure

typedef struct tagCONNECTDATA
{
	LPUNKNOWN pUnk;
	DWORD dwCookie;

} CONNECTDATA;


/////////////////////////////////////////////////////////////////////////////
//  Standard dispatch ID constants

#define DISPID_AUTOSIZE                 (-500)
#define DISPID_BACKCOLOR                (-501)
#define DISPID_BACKSTYLE                (-502)
#define DISPID_BORDERCOLOR              (-503)
#define DISPID_BORDERSTYLE              (-504)
#define DISPID_BORDERWIDTH              (-505)
#define DISPID_DRAWMODE                 (-507)
#define DISPID_DRAWSTYLE                (-508)
#define DISPID_DRAWWIDTH                (-509)
#define DISPID_FILLCOLOR                (-510)
#define DISPID_FILLSTYLE                (-511)
#define DISPID_FONT                     (-512)
#define DISPID_FORECOLOR                (-513)
#define DISPID_ENABLED                  (-514)
#define DISPID_HWND                     (-515)
#define DISPID_TABSTOP                  (-516)
#define DISPID_TEXT                     (-517)
#define DISPID_CAPTION                  (-518)
#define DISPID_BORDERVISIBLE            (-519)

#define DISPID_REFRESH                  (-550)
#define DISPID_DOCLICK                  (-551)
#define DISPID_ABOUTBOX                 (-552)

#define DISPID_CLICK                    (-600)
#define DISPID_DBLCLICK                 (-601)
#define DISPID_KEYDOWN                  (-602)
#define DISPID_KEYPRESS                 (-603)
#define DISPID_KEYUP                    (-604)
#define DISPID_MOUSEDOWN                (-605)
#define DISPID_MOUSEMOVE                (-606)
#define DISPID_MOUSEUP                  (-607)
#define DISPID_ERROREVENT               (-608)

#define DISPID_AMBIENT_BACKCOLOR        (-701)
#define DISPID_AMBIENT_DISPLAYNAME      (-702)
#define DISPID_AMBIENT_FONT             (-703)
#define DISPID_AMBIENT_FORECOLOR        (-704)
#define DISPID_AMBIENT_LOCALEID         (-705)
#define DISPID_AMBIENT_MESSAGEREFLECT   (-706)
#define DISPID_AMBIENT_SCALEUNITS       (-707)
#define DISPID_AMBIENT_TEXTALIGN        (-708)
#define DISPID_AMBIENT_USERMODE         (-709)
#define DISPID_AMBIENT_UIDEAD           (-710)
#define DISPID_AMBIENT_SHOWGRABHANDLES  (-711)
#define DISPID_AMBIENT_SHOWHATCHING     (-712)
#define DISPID_AMBIENT_DISPLAYASDEFAULT (-713)
#define DISPID_AMBIENT_SUPPORTSMNEMONICS (-714)
#define DISPID_AMBIENT_AUTOCLIP         (-715)


/////////////////////////////////////////////////////////////////////////////
// Dispatch ID constants for font and picture types

#define DISPID_FONT_NAME    0
#define DISPID_FONT_SIZE    2
#define DISPID_FONT_BOLD    3
#define DISPID_FONT_ITALIC  4
#define DISPID_FONT_UNDER   5
#define DISPID_FONT_STRIKE  6
#define DISPID_FONT_WEIGHT  7
#define DISPID_FONT_CHARSET 8

#define DISPID_PICT_HANDLE  0
#define DISPID_PICT_HPAL    2
#define DISPID_PICT_TYPE    3
#define DISPID_PICT_WIDTH   4
#define DISPID_PICT_HEIGHT  5
#define DISPID_PICT_RENDER  6