INCLUDE/Vcl/OLECTL.HPP


//-- type declarations -------------------------------------------------------
typedef tagTEXTMETRICW *PTextMetricOle;


typedef tagTEXTMETRICW  TTextMetricOle;


typedef int TOleColor;

typedef HRESULT __stdcall (*TDLLRegisterServer)(void);


typedef HRESULT __stdcall (*TDLLUnregisterServer)(void);


typedef tagPOINTFX *PPointF;


typedef tagPOINTFX  TPointF;


typedef tagCONTROLINFO *PControlInfo;


typedef tagCONTROLINFO  TControlInfo;


typedef tagCONNECTDATA *PConnectData;


typedef tagCONNECTDATA  TConnectData;