SOURCE/Vcl/OLECTL.PAS


  {$EXTERNALSYM DISPID_AUTOSIZE}
  DISPID_AUTOSIZE      = -500;
  {$EXTERNALSYM DISPID_BACKCOLOR}
  DISPID_BACKCOLOR     = -501;
  {$EXTERNALSYM DISPID_BACKSTYLE}
  DISPID_BACKSTYLE     = -502;
  {$EXTERNALSYM DISPID_BORDERCOLOR}
  DISPID_BORDERCOLOR   = -503;
  {$EXTERNALSYM DISPID_BORDERSTYLE}
  DISPID_BORDERSTYLE   = -504;
  {$EXTERNALSYM DISPID_BORDERWIDTH}
  DISPID_BORDERWIDTH   = -505;
  {$EXTERNALSYM DISPID_DRAWMODE}
  DISPID_DRAWMODE      = -507;
  {$EXTERNALSYM DISPID_DRAWSTYLE}
  DISPID_DRAWSTYLE     = -508;
  {$EXTERNALSYM DISPID_DRAWWIDTH}
  DISPID_DRAWWIDTH     = -509;
  {$EXTERNALSYM DISPID_FILLCOLOR}
  DISPID_FILLCOLOR     = -510;
  {$EXTERNALSYM DISPID_FILLSTYLE}
  DISPID_FILLSTYLE     = -511;
  {$EXTERNALSYM DISPID_FONT}
  DISPID_FONT          = -512;
  {$EXTERNALSYM DISPID_FORECOLOR}
  DISPID_FORECOLOR     = -513;
  {$EXTERNALSYM DISPID_ENABLED}
  DISPID_ENABLED       = -514;
  {$EXTERNALSYM DISPID_HWND}
  DISPID_HWND          = -515;
  {$EXTERNALSYM DISPID_TABSTOP}
  DISPID_TABSTOP       = -516;
  {$EXTERNALSYM DISPID_TEXT}
  DISPID_TEXT          = -517;
  {$EXTERNALSYM DISPID_CAPTION}
  DISPID_CAPTION       = -518;
  {$EXTERNALSYM DISPID_BORDERVISIBLE}
  DISPID_BORDERVISIBLE = -519;

  {$EXTERNALSYM DISPID_REFRESH}
  DISPID_REFRESH  = -550;
  {$EXTERNALSYM DISPID_DOCLICK}
  DISPID_DOCLICK  = -551;
  {$EXTERNALSYM DISPID_ABOUTBOX}
  DISPID_ABOUTBOX = -552;

  {$EXTERNALSYM DISPID_CLICK}
  DISPID_CLICK      = -600;
  {$EXTERNALSYM DISPID_DBLCLICK}
  DISPID_DBLCLICK   = -601;
  {$EXTERNALSYM DISPID_KEYDOWN}
  DISPID_KEYDOWN    = -602;
  {$EXTERNALSYM DISPID_KEYPRESS}
  DISPID_KEYPRESS   = -603;
  {$EXTERNALSYM DISPID_KEYUP}
  DISPID_KEYUP      = -604;
  {$EXTERNALSYM DISPID_MOUSEDOWN}
  DISPID_MOUSEDOWN  = -605;
  {$EXTERNALSYM DISPID_MOUSEMOVE}
  DISPID_MOUSEMOVE  = -606;
  {$EXTERNALSYM DISPID_MOUSEUP}
  DISPID_MOUSEUP    = -607;
  {$EXTERNALSYM DISPID_ERROREVENT}
  DISPID_ERROREVENT = -608;

  {$EXTERNALSYM DISPID_AMBIENT_BACKCOLOR}
  DISPID_AMBIENT_BACKCOLOR         = -701;
  {$EXTERNALSYM DISPID_AMBIENT_DISPLAYNAME}
  DISPID_AMBIENT_DISPLAYNAME       = -702;
  {$EXTERNALSYM DISPID_AMBIENT_FONT}
  DISPID_AMBIENT_FONT              = -703;
  {$EXTERNALSYM DISPID_AMBIENT_FORECOLOR}
  DISPID_AMBIENT_FORECOLOR         = -704;
  {$EXTERNALSYM DISPID_AMBIENT_LOCALEID}
  DISPID_AMBIENT_LOCALEID          = -705;
  {$EXTERNALSYM DISPID_AMBIENT_MESSAGEREFLECT}
  DISPID_AMBIENT_MESSAGEREFLECT    = -706;
  {$EXTERNALSYM DISPID_AMBIENT_SCALEUNITS}
  DISPID_AMBIENT_SCALEUNITS        = -707;
  {$EXTERNALSYM DISPID_AMBIENT_TEXTALIGN}
  DISPID_AMBIENT_TEXTALIGN         = -708;
  {$EXTERNALSYM DISPID_AMBIENT_USERMODE}
  DISPID_AMBIENT_USERMODE          = -709;
  {$EXTERNALSYM DISPID_AMBIENT_UIDEAD}
  DISPID_AMBIENT_UIDEAD            = -710;
  {$EXTERNALSYM DISPID_AMBIENT_SHOWGRABHANDLES}
  DISPID_AMBIENT_SHOWGRABHANDLES   = -711;
  {$EXTERNALSYM DISPID_AMBIENT_SHOWHATCHING}
  DISPID_AMBIENT_SHOWHATCHING      = -712;
  {$EXTERNALSYM DISPID_AMBIENT_DISPLAYASDEFAULT}
  DISPID_AMBIENT_DISPLAYASDEFAULT  = -713;
  {$EXTERNALSYM DISPID_AMBIENT_SUPPORTSMNEMONICS}
  DISPID_AMBIENT_SUPPORTSMNEMONICS = -714;
  {$EXTERNALSYM DISPID_AMBIENT_AUTOCLIP}
  DISPID_AMBIENT_AUTOCLIP          = -715;

{ Dispatch ID constants for fonts }

  {$EXTERNALSYM DISPID_FONT_NAME}
  DISPID_FONT_NAME    = 0;
  {$EXTERNALSYM DISPID_FONT_SIZE}
  DISPID_FONT_SIZE    = 2;
  {$EXTERNALSYM DISPID_FONT_BOLD}
  DISPID_FONT_BOLD    = 3;
  {$EXTERNALSYM DISPID_FONT_ITALIC}
  DISPID_FONT_ITALIC  = 4;
  {$EXTERNALSYM DISPID_FONT_UNDER}
  DISPID_FONT_UNDER   = 5;
  {$EXTERNALSYM DISPID_FONT_STRIKE}
  DISPID_FONT_STRIKE  = 6;
  {$EXTERNALSYM DISPID_FONT_WEIGHT}
  DISPID_FONT_WEIGHT  = 7;
  {$EXTERNALSYM DISPID_FONT_CHARSET}
  DISPID_FONT_CHARSET = 8;

{ Dispatch ID constants for pictures }

  {$EXTERNALSYM DISPID_PICT_HANDLE}
  DISPID_PICT_HANDLE = 0;
  {$EXTERNALSYM DISPID_PICT_HPAL}
  DISPID_PICT_HPAL   = 2;
  {$EXTERNALSYM DISPID_PICT_TYPE}
  DISPID_PICT_TYPE   = 3;
  {$EXTERNALSYM DISPID_PICT_WIDTH}
  DISPID_PICT_WIDTH  = 4;
  {$EXTERNALSYM DISPID_PICT_HEIGHT}
  DISPID_PICT_HEIGHT = 5;
  {$EXTERNALSYM DISPID_PICT_RENDER}
  DISPID_PICT_RENDER = 6;

type

  PTextMetricOle = PTextMetricW;
  TTextMetricOle = TTextMetricW;

  TOleColor = Longint;

  {$EXTERNALSYM OLE_XPOS_PIXELS}
  OLE_XPOS_PIXELS  = Longint;
  {$EXTERNALSYM OLE_YPOS_PIXELS}
  OLE_YPOS_PIXELS  = Longint;
  {$EXTERNALSYM OLE_XSIZE_PIXELS}
  OLE_XSIZE_PIXELS = Longint;
  {$EXTERNALSYM OLE_YSIZE_PIXELS}
  OLE_YSIZE_PIXELS = Longint;

  {$EXTERNALSYM OLE_XPOS_HIMETRIC}
  OLE_XPOS_HIMETRIC  = Longint;
  {$EXTERNALSYM OLE_YPOS_HIMETRIC}
  OLE_YPOS_HIMETRIC  = Longint;
  {$EXTERNALSYM OLE_XSIZE_HIMETRIC}
  OLE_XSIZE_HIMETRIC = Longint;
  {$EXTERNALSYM OLE_YSIZE_HIMETRIC}
  OLE_YSIZE_HIMETRIC = Longint;

  {$EXTERNALSYM OLE_XPOS_CONTAINER}
  OLE_XPOS_CONTAINER  = Single;
  {$EXTERNALSYM OLE_YPOS_CONTAINER}
  OLE_YPOS_CONTAINER  = Single;
  {$EXTERNALSYM OLE_XSIZE_CONTAINER}
  OLE_XSIZE_CONTAINER = Single;
  {$EXTERNALSYM OLE_YSIZE_CONTAINER}
  OLE_YSIZE_CONTAINER = Single;

  OLE_TRISTATE = (triUnchecked, triChecked, triGray);

  {$EXTERNALSYM OLE_OPTEXCLUSIVE}
  OLE_OPTEXCLUSIVE = Bool;

  {$EXTERNALSYM OLE_CANCELBOOL}
  OLE_CANCELBOOL = Bool;

  {$EXTERNALSYM OLE_ENABLEDEFAULTBOOL}
  OLE_ENABLEDEFAULTBOOL = Bool;

  {$EXTERNALSYM OLE_HANDLE}
  OLE_HANDLE = Longint;

{ Registration function types }

  TDLLRegisterServer = function: HResult stdcall;
  TDLLUnregisterServer = function: HResult stdcall;

{ TPointF structure }

  PPointF = ^TPointF;
  {$EXTERNALSYM tagPOINTFX}
  tagPOINTFX = record
    x: Single;
    y: Single;
  end;
  TPointF = tagPOINTFX;
  {$EXTERNALSYM POINTF}
  POINTF = tagPOINTFX;

{ TControlInfo structure }

  PControlInfo = ^TControlInfo;
  {$EXTERNALSYM tagCONTROLINFO}
  tagCONTROLINFO = record
    cb: Longint;
    hAccel: HAccel;
    cAccel: Word;
    dwFlags: Longint;
  end;
  TControlInfo = tagCONTROLINFO;
  {$EXTERNALSYM CONTROLINFO}
  CONTROLINFO = tagCONTROLINFO;

{ Forward declarations }

  {$EXTERNALSYM IOleControl}
  IOleControl = class;
  {$EXTERNALSYM IOleControlSite}
  IOleControlSite = class;
  {$EXTERNALSYM ISimpleFrameSite}
  ISimpleFrameSite = class;
  {$EXTERNALSYM IPersistStreamInit}
  IPersistStreamInit = class;
  {$EXTERNALSYM IPropertyNotifySink }
  IPropertyNotifySink = class;
  {$EXTERNALSYM IProvideClassInfo }
  IProvideClassInfo = class;
  {$EXTERNALSYM IConnectionPointContainer}
  IConnectionPointContainer = class;
  {$EXTERNALSYM IEnumConnectionPoints}
  IEnumConnectionPoints = class;
  {$EXTERNALSYM IConnectionPoint}
  IConnectionPoint = class;
  {$EXTERNALSYM IEnumConnections}
  IEnumConnections = class;
  {$EXTERNALSYM IClassFactory2 }
  IClassFactory2 = class;
  {$EXTERNALSYM ISpecifyPropertyPages }
  ISpecifyPropertyPages = class;
  {$EXTERNALSYM IPerPropertyBrowsing}
  IPerPropertyBrowsing = class;
  {$EXTERNALSYM IPropertyPageSite}
  IPropertyPageSite = class;
  {$EXTERNALSYM IPropertyPage }
  IPropertyPage = class;
  {$EXTERNALSYM IPropertyPage2 }
  IPropertyPage2 = class;
  {$EXTERNALSYM IFont }
  IFont = class;
  {$EXTERNALSYM IFontDisp}
  IFontDisp = class;
  {$EXTERNALSYM IPicture}
  IPicture = class;
  {$EXTERNALSYM IPictureDisp}
  IPictureDisp = class;

{ IOleControl interface }

  {$EXTERNALSYM IOleControl}
  IOleControl = class(IUnknown)
  public
    function GetControlInfo(var ci: TControlInfo): HResult; virtual; stdcall; abstract;
    function OnMnemonic(msg: PMsg): HResult; virtual; stdcall; abstract;
    function OnAmbientPropertyChange(dispid: TDispID): HResult; virtual; stdcall; abstract;
    function FreezeEvents(bFreeze: BOOL): HResult; virtual; stdcall; abstract;
  end;

{ IOleControlSite interface }

  {$EXTERNALSYM IOleControlSite}
  IOleControlSite = class(IUnknown)
  public
    function OnControlInfoChanged: HResult; virtual; stdcall; abstract;
    function LockInPlaceActive(fLock: BOOL): HResult; virtual; stdcall; abstract;
    function GetExtendedControl(var disp: IDispatch): HResult; virtual; stdcall; abstract;
    function TransformCoords(var ptlHimetric: TPoint; var ptfContainer: TPointF;
      flags: Longint): HResult; virtual; stdcall; abstract;
    function TranslateAccelerator(msg: PMsg; grfModifiers: Longint): HResult;
       virtual; stdcall; abstract;
    function OnFocus(fGotFocus: BOOL): HResult; virtual; stdcall; abstract;
    function ShowPropertyFrame: HResult; virtual; stdcall; abstract;
  end;

{ ISimpleFrameSite interface }

  {$EXTERNALSYM ISimpleFrameSite}
  ISimpleFrameSite = class(IUnknown)
  public
    function PreMessageFilter(wnd: HWnd; msg, wp, lp: Integer;
      var res: Integer; var Cookie: Longint): HResult;
      virtual; stdcall; abstract;
    function PostMessageFilter(wnd: HWnd; msg, wp, lp: Integer;
      var res: Integer; Cookie: Longint): HResult;
      virtual; stdcall; abstract;
  end;

{ IPersistStreamInit interface }

  {$EXTERNALSYM IPersistStreamInit}
  IPersistStreamInit = class(IPersistStream)
  public
    function InitNew: HResult; virtual; stdcall; abstract;
  end;

{ IPropertyNotifySink interface }

  {$EXTERNALSYM IPropertyNotifySink }
  IPropertyNotifySink = class(IUnknown)
  public
    function OnChanged(dispid: TDispID): HResult; virtual; stdcall; abstract;
    function OnRequestEdit(dispid: TDispID): HResult; virtual; stdcall; abstract;
  end;

{ IProvideClassInfo interface }

  {$EXTERNALSYM IProvideClassInfo }
  IProvideClassInfo = class(IUnknown)
  public
    function GetClassInfo(var ti: ITypeInfo): HResult; virtual; stdcall; abstract;
  end;

{ IConnectionPointContainer interface }

  {$EXTERNALSYM IConnectionPointContainer}
  IConnectionPointContainer = class(IUnknown)
  public
    function EnumConnectionPoints(var Enum: IEnumConnectionPoints): HResult;
      virtual; stdcall; abstract;
    function FindConnectionPoint(const iid: TIID;
      var cp: IConnectionPoint): HResult; virtual; stdcall; abstract;
  end;

{ IEnumConnectionPoints interface }

  {$EXTERNALSYM IEnumConnectionPoints}
  IEnumConnectionPoints = class(IUnknown)
  public
    function Next(celt: Longint; var elt;
      pceltFetched: PLongint): HResult; virtual; stdcall; abstract;
    function Skip(celt: Longint): HResult; virtual; stdcall; abstract;
    function Reset: HResult; virtual; stdcall; abstract;
    function Clone(var Enum: IEnumConnectionPoints): HResult;
      virtual; stdcall; abstract;
  end;

{ IConnectionPoint interface }

  {$EXTERNALSYM IConnectionPoint}
  IConnectionPoint = class(IUnknown)
  public
    function GetConnectionInterface(var iid: TIID): HResult; virtual; stdcall; abstract;
    function GetConnectionPointContainer(var cpc: IConnectionPointContainer): HResult;
      virtual; stdcall; abstract;
    function Advise(unkSink: IUnknown; var dwCookie: Longint): HResult; virtual; stdcall; abstract;
    function Unadvise(dwCookie: Longint): HResult; virtual; stdcall; abstract;
    function EnumConnections(var Enum: IEnumConnections): HResult; virtual; stdcall; abstract;
  end;

{ TConnectData structure }

  PConnectData = ^TConnectData;
  {$EXTERNALSYM tagCONNECTDATA}
  tagCONNECTDATA = record
    pUnk: IUnknown;
    dwCookie: Longint;
  end;
  TConnectData = tagCONNECTDATA;
  {$EXTERNALSYM CONNECTDATA}
  CONNECTDATA = tagCONNECTDATA;

{ IEnumConnections interface }
